kubernetes-networks/canary/hello-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  selector:
    app: hello
    branch: stable
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
